--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,12 @@ authors = [
 ]
 readme = "README.md"
 requires-python = ">=3.7"
+
+dependencies = [
+    "streamlit>=1.30.0",
+    "loguru"
+]
+
 license = { text = "MIT" }
 classifiers = [
     "Programming Language :: Python :: 3",
