--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -17,5 +17,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pytest
+          pip install -e .
       - name: Run tests
         run: pytest
