--- a/.bumpver.toml
+++ b/.bumpver.toml
@@ -3,6 +3,7 @@ current_version = "0.2.8"
 version_pattern = "MAJOR.MINOR.PATCH"
 commit_message = "Bump version: {old_version} → {new_version}"
 tag_message = "v{new_version}"
+tag_format = "v{new_version}"
 tag_scope = "default"
 commit = true
 tag = true
