--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-version = "0.2.10"
+version = "v0.2.10"
 
 name = "clay_streamlit_one"  # Must be unique on PyPI
 description = "A minimal streamlit app framework"
